# cepa-backend

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  NOTES.md  README.md  README.txt  go.mod  go.sum  run.sh  setup.jl  setup.sh
cfg/: sim_cfg.json
data/: hyper.csv  tech.csv
src/: controller.rs  data_broker.rs  db.rs  ir.rs  main.rs  net_broker.rs  simulation.rs
src/control/: io.jl  kernels.jl  main.jl  meta.jl  setup.jl  technology.jl
src/hal/: harmony_kernel.cc  harmony_kernel.h  main.cc  ml_types.h
src/server/: main.go  requests.go
