[package]
name = "cepa_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["derive"] }
futures = "0.3.12"
juniper = "0.15.3"
tower = "0.4.4"
serde_json = "1.0.61"
serde = "1.0.123"
mysql
